--- a/index.html
+++ b/index.html
@@ -1,28 +1,47 @@
 <!doctype html>
 <html>
 <head>
-<title>Too Fast Family HD: The Web App</title>
+<title>TFFHD: The Web App</title>
 </head>
 <body>
 <h1>Too Fast Family HD: The Web App</h1>
 
 <main>
+
 <section id="characters">
 	<h2>Characters</h2>
 	<ul id="characters-list"></ul>
+</section>
+
+<section id="items">
 	<h2>Items</h2>
 	<ul id="items-list"></ul>
 </section>
+
 </main>
 
 <script>
+function load_data_characters ()
+{
+	fetch("/characters")
+		.then(response => response.json())
+		.then(data => write_characters_list(data));
+}
+
 function write_characters_list (data)
 {
 	let list = "";
 	for (let i = 0; i < data.length; i++){
-		list += '<li><a href="/characters/'+data[i]._id+'">'+data[i].name+'</a></li>';
+		list += "<li>"+data[i].name+"</li>";
 	}
 	document.getElementById("characters-list").innerHTML = list;
+}
+
+function load_data_items ()
+{
+	fetch("/items")
+		.then(response => response.json())
+		.then(data => write_items_list(data));
 }
 
 function write_items_list (data)
@@ -36,18 +55,16 @@ function write_items_list (data)
 
 
 let characters_interval = setInterval(function(){
-	fetch("/characters")
-		.then(response => response.json())
-		.then(data => write_characters_list(data));
+	load_data_characters();
 }, 2000);
 
+load_data_characters();
+
 let items_interval = setInterval(function(){
-	fetch("/items")
-		.then(response => response.json())
-		.then(data => write_items_list(data));
+	load_data_items();
 },2000);
 
-//clearInterval(characters_interval);
+load_data_items();
 
 </script>
 
