Practica Final Terminada

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@ function write_characters_list (data)
 	let list = "";
 	for (let i = 0; i < data.length; i++){
 		list += '<li><a href="/characters/'+data[i]._id+'">'+data[i].name+'</a>';
-		list+= '<a href="/remove/'+data[i].id_character+'"> X</a></li>';
+		list+= '<a href="/removeCharacter/'+data[i].id_character+'"> X</a></li>';
 	}
 	document.getElementById("characters-list").innerHTML = list;
 }
 
 function load_data_items ()
 {
-fetch("/items")
-.then(response => response.json())
+	fetch("/items")
+		.then(response => response.json())
 		.then(data => write_items_list(data));
 }
 
@@ -49,7 +49,8 @@ function write_items_list (data)
 {
 	let list = "";
 	for (let i = 0; i <data.length; i++){
-		list += "<li>"+data[i].item+"</li>";
+		list += '<li><a href="/items/'+data[i]._id+'">'+data[i].item+'</a>';
+		list += '<a href="/removeItem/'+data[i].id_item+'"> X</a></li>';
 	}
 	document.getElementById("items-list").innerHTML = list;
 }
